apps/media/lidarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  labels:
    app: lidarr
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
        app.kubernetes.io/name: lidarr
        app.kubernetes.io/instance: media-prod
        app.kubernetes.io/component: lidarr
        app.kubernetes.io/part-of: arr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 20568
        runAsGroup: 20568
        fsGroup: 20568
        seccompProfile:
          type: "RuntimeDefault"
      containers:
        - image: "ghcr.io/home-operations/lidarr:3.1.6.5078"
          imagePullPolicy: "IfNotPresent"
          name: "lidarr"
          ports:
            - containerPort: 8686
              name: "lidarr"
          securityContext:
            runAsNonRoot: true
            runAsUser: 20568
            runAsGroup: 20568
            privileged: false
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            seccompProfile:
              type: "RuntimeDefault"
            capabilities:
              drop:
                - "ALL"
          resources:
            requests:
              memory: "512Mi"
              cpu: "10m"
            limits:
              memory: "768Mi"
          readinessProbe:
            httpGet:
              path: "/ping"
              port: "lidarr"
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: "/ping"
              port: "lidarr"
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
          volumeMounts:
            - name: "config"
              mountPath: "/config"
            - name: "music"
              mountPath: "/mnt/media"
            - name: "tmp"
              mountPath: "/tmp"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 5
              preference:
                matchExpressions:
                  - key: "cpu_speed"
                    operator: "In"
                    values:
                      - "slow"
        podAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: "app.kubernetes.io/part-of"
                      operator: "In"
                      values:
                        - "media"
                topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: "config"
          emptyDir:
            sizeLimit: "512Mi"
        - name: "music"
          emptyDir:
            sizeLimit: "5Mi"
        - name: "tmp"
          emptyDir:
            sizeLimit: "1Gi"
