apps/media/lidarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  ports:
    - port: 80
      targetPort: lidarr
  selector:
    app.kubernetes.io/name: lidarr
